# rtr

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  PLAN.md  README.md  delete_diagram_cpp.sh  folder_to_text.sh  generate_diagram.sh  generate_diagram_cpp.sh  imgui.ini  remove_all_gitsubmudule.sh  survey.md
assets/model/backpack/: backpack.mtl
assets/model/bunny/: bunny.mtl
assets/model/mary/: Marry.mtl
assets/shader/: common_light.glsl  common_uniform.glsl  gamma.frag  gamma.vert  pbr.vert  pbr_vssm.frag  phong.frag  phong.vert  phong_pcf.frag  phong_pcss.frag  phong_vsm.frag  phong_vssm.frag  shadow_caster.frag  shadow_caster.vert  skybox_cubemap.frag  skybox_cubemap.vert  skybox_spherical.frag  skybox_spherical.vert
assets/shader/compute/: occlusion_culling.comp
assets/shaders/fragment/: color_mix.frag  depth.frag  phong.frag  screen.frag  skybox_cube.frag  skybox_sperical.frag  skybox_spherical.frag  textured.frag  white.frag
assets/shaders/misc/colorful/: fragment.glsl  vertex.glsl
assets/shaders/screen/: screen.frag
assets/shaders/vertex/: instanced_world_n.vert  screen.vert  skybox.vert  world.vert  world_n.vert
clang_uml_config/: event_class.yaml  runtime_class.yaml  singleton_class.yaml
clang_uml_config/global/: enum_class.yaml  event_class.yaml  logger_class.yaml  math_class.yaml  serialization_class.yaml  singleton_class.yaml  timer_class.yaml
clang_uml_config/platform/: rhi_buffer_class.yaml  rhi_compute_class.yaml  rhi_device_class.yaml  rhi_frame_buffer_class.yaml  rhi_geometry_class.yaml  rhi_imgui_class.yaml  rhi_pipeline_state_class.yaml  rhi_renderer_class.yaml  rhi_shader_program_class.yaml  rhi_texture_class.yaml  rhi_window_class.yaml
clang_uml_config/resource/: file_service_class.yaml  guid_class.yaml  hash_class.yaml  resource_manager_class.yaml
clang_uml_config/resource/loader/: image_loader_class.yaml  text_loader_class.yaml
docs/diagrams/: runtime_class.puml
docs/diagrams/global/: enum_class.puml  event_class.puml  logger_class.puml  math_class.puml  serialization_class.puml  singleton_class.puml  timer_class.puml
docs/diagrams/platform/: rhi_buffer_class.puml  rhi_compute_class.puml  rhi_device_class.puml  rhi_frame_buffer_class.puml  rhi_geometry_class.puml  rhi_imgui_class.puml  rhi_pipeline_state_class.puml  rhi_renderer_class.puml  rhi_shader_program_class.puml  rhi_texture_class.puml  rhi_window_class.puml
docs/diagrams/resource/: file_service_class.puml  guid_class.puml  hash_class.puml  resource_manager_class.puml
engine/: CMakeLists.txt  base.h
engine/editor/: editor.h  editor_opengl.h
engine/editor/panel/: base_panel.h  fps_panel.h  panel.h  parallax_setting_panel.h  phong_material_setting_panel.h  shadow_setting_panel.h
engine/global/: action.h  base.h  event.h  guid.h  logger.h  math.h  singleton.h
engine/misc/: dep.cpp  skybox.cpp  spinning_earth.cpp
engine/runtime/: camera.h  camera_control.h  enum.h  frame_buffer.h  geometry.h  geometry_attribute.h  global_context.h  input.h  light.h  material.h  mesh.h  node.h  render.h  renderer.h  runtime.h  scene.h  shader.h  struct.h  texture.h
engine/runtime/context/: engine_tick_context.h  swap_struct.h
engine/runtime/core/: attribute_buffer.h  camera.h  frame_buffer.h  geometry.h  input.h  light.h  material.h  memory_buffer.h  mesh.h  node.h  renderer.h  scene.h  shader.h  skybox.h  texture.h
engine/runtime/framework/: game_object.h  scene.h  world.h
engine/runtime/function/: global_context.h  input_system.h
engine/runtime/global/: base.h  enum.h  guid.h  logger.h  math.h  reflection.h  serialization.h  singleton.h
engine/runtime/loader/: image_loader.h  image_loader_stb_image.h  model_loader.h  text_loader.h
engine/runtime/material/: depth_material.h  material.h  phong_material.h
engine/runtime/resource/: file_service.h  guid.h  hash.h  image_loader.h  model_loader.h  model_loader_assimp.h  resource_base.h  resource_manager.h
engine/runtime/rhi/: rhi_binding_state.h  rhi_buffer.h  rhi_cast.h  rhi_compute.h  rhi_device.h  rhi_frame_buffer.h  rhi_geometry.h  rhi_imgui.h  rhi_pipeline_state.h  rhi_renderer.h  rhi_resource.h  rhi_shader_code.h  rhi_shader_program.h  rhi_texture.h  rhi_window.h
engine/runtime/tool/: event.h  logger.h  serialization.h  timer.h
example/: test.cpp
example/engine/: cubes.cpp  main.cpp  mary.cpp  sponza.cpp  test.cpp
example/rhi/: compute.cpp  frame_buffer.cpp  frame_buffer_depth.cpp  normal_map.cpp  parrallax_map.cpp  skybox.cpp  spinning_earth.cpp  texture_array.cpp  textured_triangle.cpp  triangle.cpp
example/test/scene/: bag.cpp
puml/: artist_use_case.puml  backed_arch.puml  backend_platform_arch.puml  backend_platform_buffer_geometry_class.puml  backend_platform_device_class.puml  backend_platform_framebuffer_class.puml  backend_platform_function_arch.puml  backend_platform_linker_class.puml  backend_platform_pipeline_state_class.puml  backend_platform_renderer_class.puml  backend_platform_resource_arch.puml  backend_platform_shader_class.puml  backend_platform_texture_class.puml  backend_platform_window_imgui_class.puml  backend_resource_arch.puml  backend_resource_model_loader.puml  backend_tool_arch.puml  editor_class.puml  editor_seqence.puml  forward_render_pipeline.puml  frontend_arch.puml  frontend_context_double_buffer_flow.puml  frontend_context_swap_data_class.puml  frontend_context_tick_context_class.puml  frontend_frame_loop.puml  frontend_framework_arch.puml  frontend_framework_camera_class.puml  frontend_framework_camera_control_class.puml  frontend_framework_light_class.puml  frontend_framework_mesh_renderer_class.puml  frontend_framework_node_class.puml  frontend_framework_prefab_component_arch.puml  frontend_framework_shadow_caster_class.puml  frontend_function_input_class.puml  frontend_function_render_attribute_class.puml  frontend_function_render_base_class.puml  frontend_function_render_frame_buffer_class.puml  frontend_function_render_geometry_class.puml  frontend_function_render_material_class.puml  frontend_function_render_memory_class.puml  (+16 more)
(+212 files in other folders)
